Add link to repo

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: home
 ---
 
-<p>This is a demo site for the Purpletual Blog Theme. The name I wanted to use was already taken so I decided on this instead as it's a mix of purple and purpetual.</p>
+<p>This is a demo site for the <a href="https://github.com/chrisrhymes/purpletual-blog-theme">Purpletual Blog Theme</a>. The name I wanted to use was already taken so I decided on this instead as it's a mix of purple and purpetual.</p>
 
 <p>This Jekyll theme is built using Tailwind CSS as an experiment to see what it can do.</p>
 
